--- a/sei-agentfi-backend/package.json
+++ b/sei-agentfi-backend/package.json
@@ -12,10 +12,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^17.2.0",
     "hono": "^4.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.4",
     "ponder": "^0.11.34",
     "resend": "^4.7.0",
     "viem": "^2.32.1"
