--- a/sei-agentfi-backend/package.json
+++ b/sei-agentfi-backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
+    "openai": "^5.10.1",
     "ponder": "^0.11.34",
     "resend": "^4.7.0",
     "viem": "^2.32.1"
