--- a/sei-agentfi-frontend/package.json
+++ b/sei-agentfi-frontend/package.json
@@ -28,6 +28,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "viem": "^2.33.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
