--- a/frontend-fix/package.json
+++ b/frontend-fix/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.525.0",
+    "mitt": "^3.0.1",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
